[package]
name = "flutter-unused-files"
description = "Check for unused files and assets in a flutter project"
version = "0.1.0"
edition = "2021"
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
glob = "0.3.1"
indicatif = "0.17.8"
yaml-rust2 = "0.8.0"
